force-app/main/default/objects/Report_Submission__c/Report_Submission__c.object-meta.xml
<CustomObject>
    <label>Report Submission</label>
    <nameField>
        <label>Report Submissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>