force-app/main/default/objects/Report_Submission__c/fields/I_RS_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>