force-app/main/default/objects/Report_Submission__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Report Submissions</relationshipLabel>
    <relationshipName>Report_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>