force-app/main/default/objects/Report_Submission__c/fields/I_RS_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year__c</fullName>
    <formula>TEXT(YEAR( I_RS_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>